# nyc-taxi-mlops

./: .gitignore  Dockerfile  README.md  config.yml  docker-compose.prod.yml  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml  model-sync.yml  runner-test.yml
data/processed/: README.md
data/raw/: README.md
docs/: README.md
source/dataops/: Dockerfile  README.md  dag.py  extract.py  lineage.py  load.py  pipeline.py  report.py  requirements.txt  setup_db.py  transform.py  validate.py  verify_watermark.py  watermark.py
source/devops/: Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  requirements.txt
source/devops/backend/: app.py  build_zone_shapes.py  model.py  weather.py  zone_shapes.json  zones.py
source/devops/frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
source/devops/scripts/: build_zone_shapes.py
source/devops/tests/: conftest.py  test_backend.py  test_dag_import.py  test_drift_utils.py  test_evaluate.py
source/mlops/: Dockerfile  README.md  drift_detector.py  eda.ipynb  eda.py  evaluate.py  feature_engineering.py  requirements.txt  tasks.py  train.py
source/mlops/dags/: monitoring_dag.py  training_dag.py
source/mlops/models/: linear_reg.py  lstm.py  xgboost.py
source/mlops/monitor/: drift_detector.py  drift_summary.txt
source/utils/: alerting.py  config.py  db.py  monitoring.py  populate_zone.py  watermark.py
tests/: conftest.py  test_backend.py  test_dag_import.py  test_drift_utils.py  test_evaluate.py
(+26 files in other folders)
