[project]
name = "nyc-taxi-mlops"
version = "0.1.0"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "I001", "W291", "W292", "W293"]

[tool.ruff.lint.per-file-ignores]
"source/dataops/dag.py" = ["F401"]
"source/dataops/*.py" = ["E401", "F541", "F841"]
"source/mlops/dags/*.py" = ["F401", "E402"]
"source/mlops/eda.py" = ["F811"]
"source/mlops/train.py" = ["F401"]
"source/mlops/tasks/evaluate.py" = ["F841"]
"source/utils/watermark.py" = ["E712"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
